fixing the layout issue

--- a/src/app/components/completed/completed.css
+++ b/src/app/components/completed/completed.css
@@ -174,7 +174,7 @@
 
 @media screen and (min-width: 1024px) {
   .card-container {
-    width: 100%;
+    width: 98%;
     margin: 1rem;
     padding: 2rem;
     border-radius: 20px;
@@ -187,7 +187,7 @@
     padding: 2rem;
     background-color: #f1f2f6;
     border-radius: 20px;
-    width: 70%;
+    width: 100%;
     margin-right: 1rem;
   }
 
