--- a/src/app/components/pending-list/pending-list.css
+++ b/src/app/components/pending-list/pending-list.css
@@ -175,7 +175,7 @@
     margin-top: 0;
   }
   .card-container {
-    width: 100%;
+    width: 98%;
     margin: 1rem;
     padding: 2rem;
     border-radius: 20px;
